# MD_Simulation_CUDA

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_python2.txt  README.md  activate_py3.sh  environment.yml  pyproject.toml  python_py3_simple.sh  python_py3_wrapper.sh  run_test.sh  set_slurm_env.sh  submit_analysis_batch_mutual_entropy.sh  submit_analysis_batch_test_area_notebook.sh  test.txt  test_py3_env.py  tmp.md  todo.md  vcpkg.json
cuda/: md_cuda_commmon.cu
docs/: 20260303_NPH.md
include/: md_common.hpp  md_config.hpp  md_cuda_common.hpp  md_energy_minimizer.hpp  md_env.hpp  md_particle.hpp
legacy/: md_simulation.cu
python/: analysis_batch_mutual_entropy.py  analysis_csv_partial_U_lambda.ipynb  analysis_test_area_with_tri_number.ipynb  analysis_test_area_with_tri_number_3.ipynb  average_cwa.py  build_mp4.py  delete_bin_files.py  particle_csv.py  plot_ab_network_python.py  plot_cwa_python.py  plot_energy_trace.py  plot_interface_python.py  plot_particle_python.py  plot_triangulation_python.py  run_analysis_test_area_with_tri_number.py  thin_svg_plots.py
python/analysis/: analysis_NPH_batches.ipynb  analysis_NPH_xyz_batches.ipynb
run/: abp_example.cpp  series_LiquidGas.cpp  series_LiquidGas_ABP.cpp  series_NPH.cpp  series_NPH_batch_xyz_saving.cpp  series_NPH_batch_xyz_saving_piston.cpp  series_NPH_piston.cpp  series_NVT_batch_xyz_saving_piston.cpp  series_cwa_test.cpp  series_cwa_test_resume.cpp  series_partial_U_lambda_test.cpp  series_strain_test.cpp  series_test_area_with_num_tri_types.cpp
scripts/: cleanup_partial_U_lambda_interfaces_csv.sh  cwa_test.sh  devel_run_test.sh  devel_run_test_ABP.sh  devel_run_test_NPH.sh  devel_test_series_LiquidGas.sh  devel_test_series_LiquidGas_ABP.sh  run_series_LiquidGas.sh  run_series_LiquidGas_ABP.sh  run_series_NPH.sh  run_series_NPH_batch_xyz_saving.sh  run_series_NPH_batch_xyz_saving_piston.sh  run_series_NPH_piston.sh  run_series_NVT_batch_xyz_saving_piston.sh  run_series_cwa_test.sh  run_series_cwa_test_resume.sh  run_series_partial_U_lambda.sh  run_series_strain_test.sh  run_series_test_area_with_num_tri_types.sh  run_test.sh  run_triangulation_env.sh  scancel_except_vscode.sh  set_slurm_env.sh  submit_batches.sh  submit_batches_LiquidGas.sh  submit_batches_LiquidGas_ABP.sh  submit_batches_NPH.sh  submit_batches_NPH_batch_xyz_saving.sh  submit_batches_NPH_batch_xyz_saving_piston.sh  submit_batches_NPH_piston.sh  submit_batches_NVT_batch_xyz_saving_piston.sh  submit_batches_partial_U_lambda.sh  submit_batches_test_area_with_num_tri_types.sh  submit_batchs_partial_U_lambda.sh  test_check_eq.sh  vscode_slurm.sh
src/: md_common.cpp  md_config.cpp  md_cuda_common.cu  md_energy_minimizer.cu  md_env.cpp  md_env.cu  md_particle.cpp
tests/: mpi_test  mpi_test.cu  mpi_test.sh  plot_basic  plot_basic.cpp
tests/check_equilibrium_test/: check_equilibrium_test.cpp
tests/cwa_test/: config.json  cwa_test.cpp
tests/eigenvalue/: test_cal_eigen.cu  test_eigenvalue.cu
tests/env_plot/: env_plot.cpp  md_config.json
tests/md_config_load_save/: test_config  test_config.cpp  test_config_output.json
tests/mpi_build_worlds/: mpi_test.cu  mpi_test.sh
tests/nph/: config.json  nph_smoke.cpp
tests/nph_piston/: config_piston.json  nph_smoke_piston.cpp
tests/plot_basic/: plot_basic  plot_basic.cpp
tests/plot_particles/: plot_particles  plot_particles.cpp
tests/run_NPH_test/: config.json  config_large.json  config_small.json  run_test_NPH.cpp
tests/run_NPH_test/saved_env/: config.json
tests/run_NPH_test_piston/: config_large_piston.json  config_piston.json  config_small_piston.json  run_test_NPH_piston.cpp
tests/run_test/: config.json  config_small.json  run_test.cpp
tests/run_test/csv/: frame_step_0.csv  frame_step_1000.csv  frame_step_2000.csv  frame_step_3000.csv  frame_step_4000.csv  frame_step_5000.csv  frame_step_6000.csv  frame_step_7000.csv  frame_step_8000.csv  frame_step_9000.csv
tests/run_test/saved_env/: config.json
tests/run_test/saved_env_T_0.9/: config.json
tests/save_load_frame/: save_load_frame  save_load_frame.cpp
tests/test_ABP/: config.json  run_test_ABP.cpp
tests/triangulation/: config copy.json  config.json  triangulation.cpp  triangulation_env.cpp
